1.10.0/_sources/reference_cmd/dipy_fit_csa.rst.txt
.. dipy_fit_csa:

============
dipy_fit_csa
============

Synopsis
--------

Constant Solid Angle.

See :footcite:p:`Aganj2009` for further details about the method.

Usage
-----

.. code-block:: bash

    dipy_fit_csa [OPTIONS] input_files bvalues_files bvectors_files mask_files

Input Parameters
----------------

* ``input_files``

  Path to the input volumes. This path may contain wildcards to
  process multiple inputs at once.

* ``bvalues_files``

  Path to the bvalues files. This path may contain wildcards to use
  multiple bvalues files at once.

* ``bvectors_files``

  Path to the bvectors files. This path may contain wildcards to use
  multiple bvectors files at once.

* ``mask_files``

  Path to the input masks. This path may contain wildcards to use
  multiple masks at once. (default: No mask used)

General Options
---------------

* ``--b0_threshold``

  Threshold used to find b0 volumes.

* ``--bvecs_tol``

  Threshold used so that norm(bvec)=1.

* ``--sphere_name``

  Sphere name on which to reconstruct the fODFs.

* ``--relative_peak_threshold``

  Only return peaks greater than ``relative_peak_threshold * m``
  where m is the largest peak.

* ``--min_separation_angle``

  The minimum distance between directions. If two peaks are too close
  only the larger of the two is returned.

* ``--sh_order_max``

  Spherical harmonics order (l) used in the CSA fit.

* ``--parallel``

  Whether to use parallelization in peak-finding during the
  calibration procedure.

* ``--extract_pam_values``

  Whether or not to save pam volumes as single nifti files.

* ``--num_processes``

  If `parallel` is True, the number of subprocesses to use
  (default multiprocessing.cpu_count()). If < 0 the maximal number
  of cores minus ``num_processes + 1`` is used (enter -1 to use as
  many cores as possible). 0 raises an error.

Output Options
--------------

* ``--out_dir``

  Output directory. (default current directory)

* ``--out_pam``

  Name of the peaks volume to be saved.

* ``--out_shm``

  Name of the spherical harmonics volume to be saved.

* ``--out_peaks_dir``

  Name of the peaks directions volume to be saved.

* ``--out_peaks_values``

  Name of the peaks values volume to be saved.

* ``--out_peaks_indices``

  Name of the peaks indices volume to be saved.

* ``--out_sphere``

  Sphere vertices name to be saved.

* ``--out_gfa``

  Name of the generalized FA volume to be saved.

* ``--out_b``

  Name of the B Matrix to be saved.

* ``--out_qa``

  Name of the Quantitative Anisotropy to be saved.

References
----------

.. footbibliography::

Garyfallidis, E., M. Brett, B. Amirbekian, A. Rokem, S. Van Der Walt, M. Descoteaux, and I. Nimmo-Smith. Dipy, a library for the analysis of diffusion MRI data. Frontiers in Neuroinformatics, 1-18, 2014.