1.11.x/_sources/reference_cmd/dipy_fit_csa.rst.txt
.. dipy_fit_csa:

============
dipy_fit_csa
============

Synopsis
--------

Constant Solid Angle.

See :footcite:p:`Aganj2009` for further details about the method.

Usage
-----

.. code-block:: bash

    dipy_fit_csa [OPTIONS] input_files bvalues_files bvectors_files mask_files

Input Parameters
----------------

* ``input_files``

  Path to the input volumes. This path may contain wildcards to
  process multiple inputs at once.

* ``bvalues_files``

  Path to the bvalues files. This path may contain wildcards to use
  multiple bvalues files at once.

* ``bvectors_files``

  Path to the bvectors files. This path may contain wildcards to use
  multiple bvectors files at once.

* ``mask_files``

  Path to the input masks. This path may contain wildcards to use
  multiple masks at once. (default: No mask used)

General Options
---------------

* ``--method``

  Method to use for the reconstruction. Can be one of the following:
  'csa' for Constant Solid Angle reconstruction
  'qball' for Q-Ball reconstruction
  'opdt' for Orientation Probability Density Transform reconstruction
  (default: csa)

* ``--smooth``

  The regularization parameter of the model.
  (default: 0.006)

* ``--min_signal``

  During fitting, all signal values less than `min_signal` are
  clipped to `min_signal`. This is done primarily to avoid values
  less than or equal to zero when taking logs.
  (default: 1e-05)

* ``--assume_normed``

  If True, clipping and normalization of the data with respect to the
  mean B0 signal are skipped during mode fitting. This is an advanced
  feature and should be used with care.
  (default: False)

* ``--b0_threshold``

  Threshold used to find b0 volumes.
  (default: 50.0)

* ``--bvecs_tol``

  Threshold used so that norm(bvec)=1.
  (default: 0.01)

* ``--sphere_name``

  Sphere name on which to reconstruct the fODFs.
  (default: None)

* ``--relative_peak_threshold``

  Only return peaks greater than ``relative_peak_threshold * m``
  where m is the largest peak.
  (default: 0.5)

* ``--min_separation_angle``

  The minimum distance between directions. If two peaks are too close
  only the larger of the two is returned.
  (default: 25)

* ``--sh_order_max``

  Spherical harmonics order (l) used in the CSA fit.
  (default: 8)

* ``--parallel``

  Whether to use parallelization in peak-finding during the
  calibration procedure.
  (default: False)

* ``--extract_pam_values``

  Whether or not to save pam volumes as single nifti files.
  (default: False)

* ``--num_processes``

  If `parallel` is True, the number of subprocesses to use
  (default multiprocessing.cpu_count()). If < 0 the maximal number
  of cores minus ``num_processes + 1`` is used (enter -1 to use as
  many cores as possible). 0 raises an error.
  (default: None)

Output Options
--------------

* ``--out_dir``

  Output directory.
  (default:  current directory)

* ``--out_pam``

  Name of the peaks volume to be saved.
  (default: peaks.pam5)

* ``--out_shm``

  Name of the spherical harmonics volume to be saved.
  (default: shm.nii.gz)

* ``--out_peaks_dir``

  Name of the peaks directions volume to be saved.
  (default: peaks_dirs.nii.gz)

* ``--out_peaks_values``

  Name of the peaks values volume to be saved.
  (default: peaks_values.nii.gz)

* ``--out_peaks_indices``

  Name of the peaks indices volume to be saved.
  (default: peaks_indices.nii.gz)

* ``--out_sphere``

  Sphere vertices name to be saved.
  (default: sphere.txt)

* ``--out_gfa``

  Name of the generalized FA volume to be saved.
  (default: gfa.nii.gz)

* ``--out_b``

  Name of the B Matrix to be saved.
  (default: B.nii.gz)

* ``--out_qa``

  Name of the Quantitative Anisotropy to be saved.
  (default: qa.nii.gz)

References
----------

.. footbibliography::

Garyfallidis, E., M. Brett, B. Amirbekian, A. Rokem, S. Van Der Walt, M. Descoteaux, and I. Nimmo-Smith. Dipy, a library for the analysis of diffusion MRI data. Frontiers in Neuroinformatics, 1-18, 2014.